--- a/polls/templates/polls/detail.html
+++ b/polls/templates/polls/detail.html
@@ -1,12 +1,31 @@
-<h1>{{ question.question_text }}</h1>
+{% extends "website/base.html" %}
+{% block content %}
+{% load static %}
+<link rel="stylesheet" href="{% static 'polls/style.css' %}" type="text/css">
+<div class="col mx-auto">
+<div class="mx-auto col-md-6">
+        <h2>Vote:</h2>
+        <hr>
+    </div>
+<div class="col col-md-6 mx-auto question ">
 
-{% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
+   <h3>{{ question.question_text }}</h3>
+    <hr>
+    <div class="col choices">
 
-<form action="{% url 'polls:vote' question.id %}" method="post">
-{% csrf_token %}
-{% for choice in question.choice_set.all %}
-    <input type="radio" name="choice" id="choice{{ forloop.counter }}" value="{{ choice.id }}">
-    <label for="choice{{ forloop.counter }}">{{ choice.choice_text }}</label><br>
-{% endfor %}
-<input type="submit" value="Vote">
-</form>
+    {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
+
+    <form action="{% url 'polls:vote' question.id %}" method="post">
+    {% csrf_token %}
+    {% for choice in question.choice_set.all %}
+        <input type="radio" name="choice" id="choice{{ forloop.counter }}" value="{{ choice.id }}">
+        <label for="choice{{ forloop.counter }}">{{ choice.choice_text }}</label><br>
+    {% endfor %}
+    <input type="submit" value="Vote">
+    </form>
+    </div>
+</div>
+</div>
+
+
+{% endblock %}
