--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -1,11 +1,23 @@
+{% extends "website/base.html" %}
+{% block content %}
 {% load static %}
-<link rel="stylesheet" type="text/css" href="{% static 'polls/style.css' %}">
-{% if latest_poll_list %}
-    <ul>
+<link rel="stylesheet" href="{% static 'polls/style.css' %}" type="text/css">
+<div class="col mx-auto">
+    <div class="mx-auto col-md-6">
+        <h2>Recent polls:</h2>
+        <hr>
+    </div>
+
+    {% if latest_poll_list %}
     {% for question in latest_poll_list %}
-        <li><a href="{% url 'polls:detail' question.id %}">{{ question.question_text }}</a></li>
+    <div class="question mx-auto col-md-6">
+        <a href="{% url 'polls:detail' question.id %}"> <div class="question-text">{{ question.question_text }}</div></a>
+    </div>
+
     {% endfor %}
-    </ul>
 {% else %}
     <p>No polls are available.</p>
 {% endif %}
+</div>
+
+{% endblock %}
