--- a/polls/templates/polls/results.html
+++ b/polls/templates/polls/results.html
@@ -1,9 +1,25 @@
-<h1>{{ question.question_text }}</h1>
+{% extends "website/base.html" %}
+{% block content %}
+{% load static %}
+<link rel="stylesheet" href="{% static 'polls/style.css' %}" type="text/css">
+<div class="col mx-auto">
+<div class="mx-auto col-md-6">
+        <h2>Results:</h2>
+        <hr>
+    </div>
+<div class="col col-md-6 mx-auto question ">
+   <h3>{{ question.question_text }}</h3>
 
-<ul>
+<div class="col results">
 {% for choice in question.choice_set.all %}
-    <li>{{ choice.choice_text }} -- {{ choice.votes }} vote{{ choice.votes|pluralize }}</li>
+    <div class="result">
+        {{ choice.choice_text }} - {{ choice.votes }} vote{{ choice.votes|pluralize }}
+    </div>
+
 {% endfor %}
-</ul>
+</div>
 
 <a href="{% url 'polls:detail' question.id %}">Vote again?</a>
+</div>
+</div>
+{% endblock %}
