--- a/templates/website/base.html
+++ b/templates/website/base.html
@@ -19,14 +19,19 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
     <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        {% if not user.is_authenticated %}
+        {% url 'accounts:signup' as link %}
+      <li class="{% if link  == request.path %}active{% endif %} nav-item ">
+        <a  class="  nav-link" href="{% url 'accounts:signup' %}">SignUp </a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Features</a>
+        {% url 'login' as link %}
+      <li class=" {% if link == request.path %}active{% endif %} nav-item {% if active_link == 'login' %} active {% endif %}">
+        <a class="nav-link" href="/login/">Login</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Pricing</a>
+        {% else %}
+        {% url 'logout' as link %}
+      <li class="{% if link  == request.path %}active{% endif %} nav-item ">
+        <a  class="  nav-link" href="{% url 'logout' %}">Logout </a>
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -38,6 +43,7 @@
           <a class="dropdown-item" href="#">Something else here</a>
         </div>
       </li>
+        {% endif %}
     </ul>
   </div>
 </nav>
