--- a/polls/templates/polls/detail.html
+++ b/polls/templates/polls/detail.html
@@ -18,7 +18,7 @@
     <form action="{% url 'polls:vote' question.id %}" method="post">
     {% csrf_token %}
     {% for choice in question.choice_set.all %}
-        <input type="radio" name="choice" id="choice{{ forloop.counter }}" value="{{ choice.id }}">
+        <input type="radio" name="choice" id="choice{{ forloop.counter }}" value="{{ choice.id }}" {% if checked_choice == choice %} checked {% endif %} >
         <label for="choice{{ forloop.counter }}">{{ choice.choice_text }}</label><br>
     {% endfor %}
         <p>{% if not user.is_authenticated %} Only logged user in can vote. {% endif %}</p>
