--- a/polls/templates/polls/results.html
+++ b/polls/templates/polls/results.html
@@ -11,9 +11,9 @@
    <h3>{{ question.question_text }}</h3>
 
 <div class="col results">
-{% for choice in question.choice_set.all %}
+    {% for choice in question.choice_set.all %}
     <div class="result">
-        {{ choice.choice_text }} - {{ choice.votes }} vote{{ choice.votes|pluralize }}
+        {{ choice.choice_text }} - {{ choice.vote_set.count }} vote{{ choice.votes|pluralize }}
     </div>
 
 {% endfor %}
