--- a/templates/website/base.html
+++ b/templates/website/base.html
@@ -19,6 +19,10 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
     <ul class="navbar-nav">
+        {% url 'polls:polls' as link %}
+      <li class="{% if link  == request.path %}active{% endif %} nav-item ">
+        <a  class="  nav-link" href="{% url 'polls:polls' %}">Polls</a>
+      </li>
         {% if not user.is_authenticated %}
         {% url 'accounts:signup' as link %}
       <li class="{% if link  == request.path %}active{% endif %} nav-item ">
