--- a/accounts/templates/registration/login.html
+++ b/accounts/templates/registration/login.html
@@ -1,5 +1,9 @@
 {% extends "website/base.html" %}
 {% block content %}
+{% load static %}
+<link rel="stylesheet" href="{% static 'polls/style.css' %}" type="text/css">
+<div class="mx-auto ">
+   <h2>Log in</h2>
     {% if form.errors %}
     <p>Your username and password didn't match. Please try again.</p>
   {% endif %}
@@ -15,20 +19,10 @@
 
   <form method="post" action="{% url 'login' %}">
     {% csrf_token %}
-    <table>
-      <tr>
-        <td>{{ form.username.label_tag }}</td>
-        <td>{{ form.username }}</td>
-      </tr>
-      <tr>
-        <td>{{ form.password.label_tag }}</td>
-        <td>{{ form.password }}</td>
-      </tr>
-    </table>
-    <input type="submit" value="login" />
+      <p>{{ form.username.label_tag }}<br>{{ form.username }}</p>
+      <p>{{ form.password.label_tag }}<br>{{ form.password }}</p>
+    <input type="submit" value="Login" />
     <input type="hidden" name="next" value="{{ next }}" />
   </form>
-
-  {# Assumes you setup the password_reset view in your URLconf #}
-  <p><a href="{% url 'password_reset' %}">Lost password?</a></p>
+</div>
 {% endblock %}
