--- a/polls/templates/polls/detail.html
+++ b/polls/templates/polls/detail.html
@@ -21,7 +21,7 @@
         <input type="radio" name="choice" id="choice{{ forloop.counter }}" value="{{ choice.id }}" {% if checked_choice == choice %} checked {% endif %} >
         <label for="choice{{ forloop.counter }}">{{ choice.choice_text }}</label><br>
     {% endfor %}
-        <p>{% if not user.is_authenticated %} Only logged user in can vote. {% endif %}</p>
+        <p>{% if not user.is_authenticated %} Only logged in user  can vote. {% endif %}</p>
 
     <input type="submit" value="Vote" {% if not user.is_authenticated %} Disabled {% endif %}>
         <a class="link" href="{% url 'polls:results' question.id %}"> Results</a>
