--- a/polls/templates/polls/polls.html
+++ b/polls/templates/polls/polls.html
@@ -6,18 +6,50 @@
     <div class="mx-auto col-md-6">
         <h2>Polls:</h2>
         <hr>
-    </div>
 
     {% if latest_poll_list %}
+    {% if is_paginated %}
+        <div class="pagination">
+            <span class="page-links">
+                {% if page_obj.has_previous %}
+                    <a href="?page={{ page_obj.previous_page_number }}">previous</a>
+                {% endif %}
+                <span class="page-current">
+                    Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+                </span>
+                {% if page_obj.has_next %}
+                    <a href="?page={{ page_obj.next_page_number }}">next</a>
+                {% endif %}
+            </span>
+        </div>
+{% endif %}
     {% for question in latest_poll_list %}
-    <div class="question mx-auto col-md-6">
+    <div class="question ">
         <a href="{% url 'polls:detail' question.id %}"> <div class="question-text">{{ question.question_text }}</div></a>
     </div>
 
     {% endfor %}
+    {% if is_paginated %}
+        <div class="pagination">
+            <span class="page-links">
+                {% if page_obj.has_previous %}
+                    <a href="?page={{ page_obj.previous_page_number }}">previous</a>
+                {% endif %}
+                <span class="page-current">
+                    Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+                </span>
+                {% if page_obj.has_next %}
+                    <a href="?page={{ page_obj.next_page_number }}">next</a>
+                {% endif %}
+            </span>
+        </div>
+{% endif %}
 {% else %}
     <p>No polls are available.</p>
 {% endif %}
 </div>
+</div>
+
 
 {% endblock %}
+
