--- a/templates/website/base.html
+++ b/templates/website/base.html
@@ -7,7 +7,7 @@
 
     <!-- Bootstrap CSS -->
     {% load static %}
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" integrity="sha384-SI27wrMjH3ZZ89r4o+fGIJtnzkAnFs3E4qz9DIYioCQ5l9Rd/7UAa8DHcaL8jkWt" crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}" integrity="sha384-SI27wrMjH3ZZ89r4o+fGIJtnzkAnFs3E4qz9DIYioCQ5l9Rd/7UAa8DHcaL8jkWt" crossorigin="anonymous">
     <title>Title</title>
 </head>
 <body>
@@ -29,24 +29,28 @@
         <a  class="  nav-link" href="{% url 'accounts:signup' %}">SignUp </a>
       </li>
         {% url 'login' as link %}
-      <li class=" {% if link == request.path %}active{% endif %} nav-item {% if active_link == 'login' %} active {% endif %}">
+      <li class=" {% if link == request.path %}active{% endif %} nav-item ">
         <a class="nav-link" href="/login/">Login</a>
       </li>
         {% else %}
-        {% url 'logout' as link %}
-      <li class="{% if link  == request.path %}active{% endif %} nav-item ">
-        <a  class="  nav-link" href="{% url 'logout' %}">Logout </a>
-      </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Dropdown link
+        <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="{% url 'polls:user-polls' %}" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          My polls
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-          <a class="dropdown-item" href="#">Action</a>
+            {% url 'polls:user-polls' as link %}
+          <a class=" {% if link == request.path %}active{% endif %} dropdown-item" href="{% url 'polls:user-polls' %}">My polls</a>
+            {% url 'polls:user-create-poll' as link %}
+          <a class=" {% if link == request.path %}active{% endif %} dropdown-item" href="{% url 'polls:user-create-poll' %}">Create poll</a>
           <a class="dropdown-item" href="#">Another action</a>
           <a class="dropdown-item" href="#">Something else here</a>
         </div>
       </li>
+        {% url 'logout' as link %}
+      <li class="{% if link  == request.path %}active{% endif %} nav-item ">
+        <a  class="  nav-link" href="{% url 'logout' %}">Logout </a>
+      </li>
+
         {% endif %}
     </ul>
   </div>
@@ -64,5 +68,6 @@
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.0/js/bootstrap.min.js" integrity="sha384-3qaqj0lc6sV/qpzrc1N5DC6i1VRn/HyX4qdPaiEFbn54VjQBEU341pvjz7Dv3n6P" crossorigin="anonymous"></script>
+    <script src="{% static 'js/choicescript.js' %}"></script>
 </body>
 </html>
