--- a/templates/website/base.html
+++ b/templates/website/base.html
@@ -34,22 +34,24 @@
       </li>
         {% else %}
         <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="{% url 'polls:user-polls' %}" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          My polls
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            {% url 'polls:user-polls' as link %}
+    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">My Polls</a>
+    <div class="dropdown-menu">
+        {% url 'polls:user-polls' as link %}
           <a class=" {% if link == request.path %}active{% endif %} dropdown-item" href="{% url 'polls:user-polls' %}">My polls</a>
             {% url 'polls:user-create-poll' as link %}
           <a class=" {% if link == request.path %}active{% endif %} dropdown-item" href="{% url 'polls:user-create-poll' %}">Create poll</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <a class="dropdown-item" href="#">Something else here</a>
-        </div>
-      </li>
-        {% url 'logout' as link %}
-      <li class="{% if link  == request.path %}active{% endif %} nav-item ">
-        <a  class="  nav-link" href="{% url 'logout' %}">Logout </a>
-      </li>
+    </div>
+  </li>
+        <li class="nav-item dropdown">
+    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">{{user}}</a>
+    <div class="dropdown-menu">
+        {% url 'accounts:settings' as link %}
+      <a class="{% if link  == request.path %}active{% endif %} dropdown-item" href="{% url 'accounts:settings' %}">Settings</a>
+      <div class="dropdown-divider"></div>
+       {% url 'logout' as link %}
+      <a  class="{% if link  == request.path %}active{% endif %}  dropdown-item" href="{% url 'logout' %}">Logout </a>
+    </div>
+  </li>
 
         {% endif %}
     </ul>
