--- a/accounts/templates/accounts/settings.html
+++ b/accounts/templates/accounts/settings.html
@@ -9,7 +9,7 @@
           {% for field in form %}
             <p>
               {{ field.label_tag }}<br>
-
+                {{ field.help_text }} <br>
                 {% for f in field%}
                     {{ f }} <br>
                 {% endfor %}
