--- a/polls/templates/polls/user/userpolls.html
+++ b/polls/templates/polls/user/userpolls.html
@@ -3,7 +3,7 @@
 {% load static %}
 <link rel="stylesheet" href="{% static 'polls/style.css' %}" type="text/css">
 <div class="col mx-auto col-md-6">
-        <h2>Polls:</h2>
+        <h2>My polls:</h2>
         <hr>
 
 
