--- a/polls/templates/polls/polls.html
+++ b/polls/templates/polls/polls.html
@@ -7,7 +7,7 @@
         <h2>Polls:</h2>
         <hr>
         {% if user.is_authenticated %}
-        <p>Polls preferences can be changed in settings</p>
+        <p>Poll preference can be changed in settings</p>
         {% endif %}
     {% if latest_poll_list %}
     {% if is_paginated %}
