--- a/templates/website/base.html
+++ b/templates/website/base.html
@@ -12,7 +12,6 @@
     <title>Kursinis</title>
 </head>
 <body>
-
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <a class="navbar-brand" href="{% url 'polls:index' %}">Kursinis</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -57,9 +56,14 @@
       <a  class="{% if link  == request.path %}active{% endif %}  dropdown-item" href="{% url 'logout' %}">{% trans "Logout" %} </a>
     </div>
   </li>
-        
-
         {% endif %}
+        <li class="  nav-item ">
+        {% if LANGUAGE_CODE == 'en' %}
+       <a  class="nav-link" href="{{ language_url }}">LT</a>
+{% else %}
+       <a  class="nav-link" href="{{ language_url }}">EN</a>
+{% endif %}
+      </li>
     </ul>
   </div>
 </nav>
