--- a/accounts/templates/accounts/settings.html
+++ b/accounts/templates/accounts/settings.html
@@ -1,9 +1,10 @@
 {% extends "website/base.html" %}
+{% load i18n %}
 {% block content %}
 {% load static %}
 <link rel="stylesheet" href="{% static 'polls/style.css' %}" type="text/css">
 <div class="mx-auto ">
-    <h2>Sign up Form</h2>
+    <h2>{% trans "Settings" %}</h2>
         <form method="post">
           {% csrf_token %}
           {% for field in form %}
@@ -18,7 +19,7 @@
               {% endfor %}
             </p>
           {% endfor %}
-          <button type="submit">Save</button>
+          <button type="submit">{% trans "Save" %}</button>
         </form>
 </div>
 {% endblock %}
