--- a/accounts/templates/registration/login.html
+++ b/accounts/templates/registration/login.html
@@ -1,19 +1,20 @@
 {% extends "website/base.html" %}
+{% load i18n %}
 {% block content %}
 {% load static %}
 <link rel="stylesheet" href="{% static 'polls/style.css' %}" type="text/css">
 <div class="mx-auto ">
-   <h2>Log in</h2>
+   <h2>{% trans "Log in" %}</h2>
     {% if form.errors %}
-    <p>Your username and password didn't match. Please try again.</p>
+    <p>{% trans "Cam't find user with such information. Please try again." %}</p>
   {% endif %}
 
   {% if next %}
     {% if user.is_authenticated %}
-      <p>Your account doesn't have access to this page. To proceed,
-      please login with an account that has access.</p>
+      <p>{% trans "Your account doesn't have access to this page. To proceed,
+      please login with an account that has access." %}</p>
     {% else %}
-      <p>Please login to see this page.</p>
+      <p>{% trans "Please login to see this page." %}</p>
     {% endif %}
   {% endif %}
 
@@ -21,7 +22,7 @@
     {% csrf_token %}
       <p>{{ form.username.label_tag }}<br>{{ form.username }}</p>
       <p>{{ form.password.label_tag }}<br>{{ form.password }}</p>
-    <input type="submit" value="Login" />
+    <input type="submit" value="{% trans 'Login' %}" />
     <input type="hidden" name="next" value="{{ next }}" />
   </form>
 </div>
