--- a/pollEmail/templates/pollEmail/email.html
+++ b/pollEmail/templates/pollEmail/email.html
@@ -1,14 +1,15 @@
 {% extends "website/base.html" %}
+{% load i18n %}
 {% block content %}
 <div class="mx-auto ">
-    <h2>Send email</h2>
+    <h2>{% trans "Send email" %}</h2>
 <form action="/email/" method="post">
     {% csrf_token %}
     {% for f in form %}
          {{ f.label_tag }}<br>
         {{ f }}<br>
     {% endfor %}
-    <input type="submit" value="OK">
+    <input type="submit" value="{% trans 'Send' %}">
 </form>
 </div>
 {% endblock %}
