--- a/polls/templates/polls/detail.html
+++ b/polls/templates/polls/detail.html
@@ -1,10 +1,11 @@
 {% extends "website/base.html" %}
+{% load i18n %}
 {% block content %}
 {% load static %}
 <link rel="stylesheet" href="{% static 'polls/style.css' %}" type="text/css">
 <div class="col mx-auto">
 <div class="mx-auto col-md-6">
-        <h2>Vote:</h2>
+        <h2>{% trans "Vote" %}:</h2>
         <hr>
     </div>
 <div class="col col-md-6 mx-auto question ">
@@ -21,10 +22,10 @@
         <input type="radio" name="choice" id="choice{{ forloop.counter }}" value="{{ choice.id }}" {% if checked_choice == choice %} checked {% endif %} >
         <label for="choice{{ forloop.counter }}">{{ choice.choice_text }}</label><br>
     {% endfor %}
-        <p>{% if not user.is_authenticated %} Only logged in user  can vote. {% endif %}</p>
+        <p>{% if not user.is_authenticated %}{% trans "Only logged in user  can vote." %} {% endif %}</p>
 
     <input type="submit" value="Vote" {% if not user.is_authenticated %} Disabled {% endif %}>
-        <a class="link" href="{% url 'polls:results' question.id %}"> Results</a>
+        <a class="link" href="{% url 'polls:results' question.id %}"> {% trans "Results" %}</a>
     </form>
     </div>
 </div>
