--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -1,10 +1,11 @@
 {% extends "website/base.html" %}
+{% load i18n %}
 {% block content %}
 {% load static %}
 <link rel="stylesheet" href="{% static 'polls/style.css' %}" type="text/css">
 <div class="col mx-auto">
     <div class="mx-auto col-md-6">
-        <h2>Recent polls:</h2>
+        <h2>{% trans "Recent polls" %}:</h2>
         <hr>
     </div>
 
@@ -19,7 +20,7 @@
 
     {% endfor %}
 {% else %}
-    <p>No polls are available.</p>
+    <p>{% trans "No polls are available." %}</p>
 {% endif %}
 </div>
 
