--- a/polls/templates/polls/polls.html
+++ b/polls/templates/polls/polls.html
@@ -1,30 +1,17 @@
 {% extends "website/base.html" %}
+{% load i18n %}
 {% block content %}
 {% load static %}
 <link rel="stylesheet" href="{% static 'polls/style.css' %}" type="text/css">
 <div class="col mx-auto">
     <div class="mx-auto col-md-6">
-        <h2>Polls:</h2>
+        <h2>{% trans "Polls" %}:</h2>
         <hr>
         {% if user.is_authenticated %}
-        <p>Poll preference can be changed in settings</p>
+        <p> {% trans "Poll preference can be changed in settings" %}</p>
         {% endif %}
     {% if latest_poll_list %}
-    {% if is_paginated %}
-        <div class="pagination">
-            <span class="page-links">
-                {% if page_obj.has_previous %}
-                    <a href="?page={{ page_obj.previous_page_number }}">previous</a>
-                {% endif %}
-                <span class="page-current">
-                    Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
-                </span>
-                {% if page_obj.has_next %}
-                    <a href="?page={{ page_obj.next_page_number }}">next</a>
-                {% endif %}
-            </span>
-        </div>
-{% endif %}
+    {% include "polls/pagination.html" %}
     {% for question in latest_poll_list %}
     <div class="question ">
         <a href="{% url 'polls:detail' question.id %}">
@@ -34,23 +21,9 @@
     </div>
 
     {% endfor %}
-    {% if is_paginated %}
-        <div class="pagination">
-            <span class="page-links">
-                {% if page_obj.has_previous %}
-                    <a href="?page={{ page_obj.previous_page_number }}">previous</a>
-                {% endif %}
-                <span class="page-current">
-                    Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
-                </span>
-                {% if page_obj.has_next %}
-                    <a href="?page={{ page_obj.next_page_number }}">next</a>
-                {% endif %}
-            </span>
-        </div>
-{% endif %}
+    {% include "polls/pagination.html" %}
 {% else %}
-    <p>No polls are available.</p>
+    <p>% trans "No polls are available." %}</p>
 {% endif %}
 </div>
 </div>
