--- a/polls/templates/polls/user/editpoll.html
+++ b/polls/templates/polls/user/editpoll.html
@@ -1,10 +1,11 @@
 {% extends "website/base.html" %}
+{% load i18n %}
 {% block content %}
 {% load static %}
 <link rel="stylesheet" href="{% static 'polls/style.css' %}" type="text/css">
 <div class="col mx-auto">
 <div class="mx-auto col-md-6">
-        <h2>Create poll:</h2>
+        <h2>Edit poll:</h2>
         <hr>
     </div>
 <div class="col col-md-6 mx-auto question ">
