Fixed template and created_at

--- a/polls/templates/polls/polls.html
+++ b/polls/templates/polls/polls.html
@@ -23,7 +23,7 @@
     {% endfor %}
     {% include "polls/pagination.html" %}
 {% else %}
-    <p>% trans "No polls are available." %}</p>
+    <p>{% trans "No polls are available." %}</p>
 {% endif %}
 </div>
 </div>
